--- a/practice.html
+++ b/practice.html
@@ -3,4 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Practice</title>
+</head>
+<script src = "app.js">
+    alert('Hello World');
+</script>
+<body>
+    <h1>Practice</h1>
+    <p>Practice</p>
+</body>
 </html>
