my javascriot is amazing😍✔👌😒

--- a/project.html
+++ b/project.html
@@ -42,7 +42,9 @@
                 display:inline;
             }
         </style>
-    </head>   
+    </head>
+    <script src="calulator.js">mY FIRST JAVASCRIPT CODE</script>
+    <body>
         <form>
             Enter your name:<input type="text" name="name" id="name" /></br></br>
             Enter your address:<textarea name="address" id="address" cols="23" rows="5"></textarea>
