My javascript coding is amazing👌😍✔🎉😍

--- a/project.html
+++ b/project.html
@@ -43,7 +43,7 @@
             }
         </style>
     </head>
-    <script src="calulator.js">mY FIRST JAVASCRIPT CODE</script>
+    <script src="calulator.js"></script>
     <body>
         <form>
             Enter your name:<input type="text" name="name" id="name" /></br></br>
